# AggreGator

./: .devcontainer.json  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python.yml
src/apps/cli/src/aggregator/: cli.py
src/apps/cli/src/aggregator/subcommands/: db.py  market.py
src/apps/cli/src/aggregator/subcommands/helpers/: init_db.py  populate_market_data.py
src/libs/db/src/aggregator/db/engine/: engine_utils.py
src/libs/db/src/aggregator/db/models/: asset_type.py  cash.py  lots.py  market.py  trades.py
src/libs/db/tests/aggregator/db/engine/: test_engine_utils.py
